# Reinforcement-machine-learning-policy-gradient-from-pixels-C-OpenCV

./: CMakeLists.txt  Makefile  README.md  main.cpp  pinball2  pinball_game.hpp  pix2hid_weight.partae
